# public-records-ingestion

./: US_Public_Records_Architecture.md  public_records_reference.html
medallion-demo/: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.py
medallion-demo/.gemini/: settings.json  styleguide.md
medallion-demo/.github/workflows/: ci.yml
medallion-demo/airflow/dags/: medallion_pipeline.py
medallion-demo/config/: pipeline_config.yaml
medallion-demo/dbt/: dbt_project.yml
medallion-demo/dbt/models/: sources.yml
medallion-demo/docker/: Dockerfile
medallion-demo/docs/: DATA_DICTIONARY.md  SPEC_DRIVEN_GUIDE.md  architecture.mermaid
medallion-demo/sample_data/: generate_sample_data.py
medallion-demo/src/: __init__.py
medallion-demo/src/bronze/: ingest.py
medallion-demo/src/gold/: customer_360.py  daily_revenue.py
medallion-demo/src/quality/: checks.py  gates.py  report.py
medallion-demo/src/silver/: transform.py
us-suits-pipeline/: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  run_pipeline.py
us-suits-pipeline/.gemini/: styleguide.md
us-suits-pipeline/config/: pipeline_config.yaml
us-suits-pipeline/docs/: ADDING_NEW_STATE.md  suits_airflow_dag.mermaid  suits_architecture_dashboard.html  suits_architecture_dashboard.jsx  suits_architecture_flow.mermaid  suits_entity_model.mermaid  suits_technical_documentation.md
us-suits-pipeline/sample_data/: generate_state_suits.py
us-suits-pipeline/src/: __init__.py
(+47 files in other folders)
