[project]
name = "us-suits-pipeline"
version = "1.0.0"
description = "Spec-driven medallion architecture for US public court suits data"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
